manifests/base/resources/qix-data-connection/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "9011"
    prometheus.io/scrape: "true"
  labels:
    app: qix-data-connection
    chart: qix-data-connection-1.8.8
    heritage: Helm
    release: qix-data-connection
  name: qix-data-connection
spec:
  ports:
  - name: qix-data-connection
    port: 9011
    protocol: TCP
    targetPort: 9011
  selector:
    app: qix-data-connection
    release: qix-data-connection
  type: ClusterIP
---
