manifests/base/resources/qix-data-connection/resources/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-response-headers: Authorization
    nginx.ingress.kubernetes.io/auth-url: http://qix-data-connection-edge-auth.$(NAMESPACE).svc.cluster.local:8080/v1/auth
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite (?i)/api/(.*) /$1 break;
  labels:
    app: qix-data-connection
    chart: qix-data-connection-1.8.8
    heritage: Helm
    release: qix-data-connection
  name: qix-data-connection
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: qix-data-connection
          servicePort: 9011
        path: /api/v1/dataconnections
---
